martian-derive/tests/ui_martian_struct/derive_on_unit.stderr
error: #[derive(MartianStruct)] can only be used on structs with named fields.
 --> $DIR/derive_on_unit.rs:4:1
  |
4 | struct UnitStruct;
  | ^^^^^^^^^^^^^^^^^^
