martian-derive/tests/ui_martian_struct/derive_on_unit.rs
use martian_derive::MartianStruct;

#[derive(MartianStruct)]
struct UnitStruct;

fn main() {}
